--- a/mlc_config.json
+++ b/mlc_config.json
@@ -41,6 +41,9 @@
 		},
 		{
 			"pattern": "https://businesswire.com*"
+		},
+		{
+			"pattern": "https://www.tmcnet.com*"
 		}
 	],
   "timeout": "30s",
