add cdnfonts.com to ignore URL check as they are using cloudflare

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -38,6 +38,9 @@
 		},
 		{
 			"pattern": "https://www.tmcnet.com*"
+		},
+		{
+			"pattern": "https://www.cdnfonts.com*"
 		}
 	],
   "timeout": "30s",
