--- a/.github/workflows/check-markdown.yml
+++ b/.github/workflows/check-markdown.yml
@@ -7,7 +7,12 @@ jobs:
     steps:
       - name: Checkout this repository
         uses: actions/checkout@v3.0.2
-      
+
+      - name: Download .markdownlint.json
+        uses: wei/curl@master
+        with:
+          args: https://raw.githubusercontent.com/fharper/gh-configs/main/.markdownlint.json
+
       - name: Validate Markdown
         uses: DavidAnson/markdownlint-cli2-action@v7
         with:
