--- a/.github/workflows/check-markdown.yml
+++ b/.github/workflows/check-markdown.yml
@@ -1,20 +1,20 @@
 name: Markdown Syntax Validation
-on: push
+on: [push, workflow_dispatch]
 
 jobs:
   markdown-check:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout this repository
-        uses: actions/checkout@v3.0.2
+        uses: actions/checkout@master
 
       - name: Download .markdownlint.json
-        uses: wei/curl@master
+        uses: wei/wget@v1
         with:
           args: https://raw.githubusercontent.com/fharper/gh-configs/main/.markdownlint.json
 
       - name: Validate Markdown
-        uses: DavidAnson/markdownlint-cli2-action@v7
+        uses: DavidAnson/markdownlint-cli2-action@v9
         with:
             command: config
             globs: |
