--- a/.github/workflows/check-links.yml
+++ b/.github/workflows/check-links.yml
@@ -15,6 +15,7 @@ jobs:
         url: "https://raw.githubusercontent.com/fharper/gh-configs/main/.markdownlinkcheck.json"
 
     - name: Validate Links
-      uses: gaurav-nelson/github-action-markdown-link-check@v1
+      uses: gaurav-nelson/github-action-markdown-link-check@1.0.15
       with:
+        use-quiet-mode: 'yes'
         config-file: '.markdownlinkcheck.json'
