--- a/.github/workflows/check-syntax.yml
+++ b/.github/workflows/check-syntax.yml
@@ -7,8 +7,9 @@ jobs:
     name: vale
     runs-on: ubuntu-latest
     steps:
+
       - name: Checkout this repository
-        uses: actions/checkout@main
+        uses: actions/checkout@v4.1.4
 
       - name: Download .vale.ini
         run: wget https://raw.githubusercontent.com/fharper/gh-configs/main/.vale.ini -O .vale.ini
@@ -29,15 +30,9 @@ jobs:
       - name: Download base Vocab accept.txt
         run: wget https://raw.githubusercontent.com/fharper/gh-configs/main/styles/Vocab/base/accept.txt -O styles/Vocab/base/accept.txt
 
-      - name: Get latest version of Vale
-        id: lastversion
-        uses: dvershinin/lastversion-action@v0.0.3
-        with:
-          repository: errata-ai/vale
-
       - name: Install Vale
         run: |
-          wget https://github.com/errata-ai/vale/releases/download/v${{ steps.lastversion.outputs.last_version }}/vale_${{ steps.lastversion.outputs.last_version }}_Linux_64-bit.tar.gz -O vale.tar.gz
+          wget https://github.com/errata-ai/vale/releases/download/v2.30.0/vale_2.30.0_Linux_64-bit.tar.gz -O vale.tar.gz
           tar -xvzf vale.tar.gz vale
           rm vale.tar.gz
 
